--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <p>Hello 大家好</p>
 <p>我是你说的都对，这是我的个人网站。 </p>
 <p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<img src="pictures/1.jpeg">
+
+
+
+
 
 <ul>
   <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
