--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p>Hello 大家好</p>
 <p>我是你说的都对，这是我的个人网站。 </p>
 <p>很高兴你来到这里, 你可以在以下的网站找到我</p>
-<img src="pictures/3.jpeg">
+<img src="https://cn.bing.com/th?id=OHR.OrkneyStones_EN-US3355508244_UHD.jpg&rf=LaDigue_UHD.jpg&pid=hp&w=3840&h=2160&rs=1&c=4">
 
 <img src="pictures/2.jpeg">
 
